--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
-    "install": "npm run build"
+    "build": "rollup -c"
   },
   "author": "",
   "license": "ISC",
