Skip rollup and dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,17 @@
+  
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"]
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from"
+  ],
+  "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-react"
+  ]
 }
