--- a/package.json
+++ b/package.json
@@ -5,41 +5,21 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "babel src -d dist --copy-files"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-amplify/ui-react": "^0.2.15",
-    "@rjsf/core": "^2.3.0",
-    "@rjsf/material-ui": "^2.3.0",
-    "aws-amplify": "^3.0.24",
-    "react-admin": "^3.8.2",
-    "react-admin-import-csv": "^0.2.18"
   },
   "peerDependencies": {
     "react": "^16.x",
     "react-dom": "^16.x"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "eslint": "^7.7.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "rollup": "^2.26.5",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^2.1.0"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0"
   }
 }
