--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "traverse": "^0.6.6"
   },
   "peerDependencies": {
     "react": "^16.x",
