--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": {
       "patterns": [
         "src"
-      ]
+      ],
+      "extensions": "js,html,css"
     }
   },
   "scripts": {
