--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "babel src -d dist --copy-files",
     "watch": "npm-watch"
   },
@@ -24,15 +24,34 @@
     "traverse": "^0.6.6"
   },
   "peerDependencies": {
+    "@rjsf/core": "^2.x",
+    "@rjsf/material-ui": "^2.x",
+    "@aws-amplify/ui-react": "^1.x",
     "react": "^16.x",
-    "react-dom": "^16.x"
+    "react-dom": "^16.x",
+    "aws-amplify": "^3.x",
+    "react-admin": "^3.x",
+    "react-admin-import-csv": "^0.x"
   },
   "devDependencies": {
+    "@aws-amplify/ui-react": "^1.2.2",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "npm-watch": "^0.7.0"
+    "@rjsf/core": "^2.5.1",
+    "@rjsf/material-ui": "^2.5.1",
+    "@testing-library/react": "^11.2.7",
+    "aws-amplify": "^4.1.0",
+    "babel-jest": "^27.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
+    "npm-watch": "^0.7.0",
+    "react": "^16.14.0",
+    "react-admin": "^3.16.2",
+    "react-admin-import-csv": "^1.0.19",
+    "react-dom": "^16.14.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
