packaging and bundling updates

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,6 @@
-  
 {
   "plugins": [
     "@babel/plugin-proposal-export-default-from"
   ],
-  "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "@babel/preset-react"
-  ]
+  "presets": [["@babel/preset-env", {"targets": {"node": "current"}}], "@babel/preset-react"]
 }
