--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
   "name": "react-admin-lolo",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "watch": {
-    "build": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "js,html,css"
-    }
-  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "source": "src/index.js",
+  "outDir": "dist",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist --copy-files",
-    "watch": "npm-watch"
+    "test": "jest",
+    "build": "rollup -c"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "throttle-debounce": "^2.3.0",
-    "traverse": "^0.6.6"
-  },
   "peerDependencies": {
-    "react": "^16.x",
-    "react-dom": "^16.x"
+    "react": "16.8.0",
+    "react-dom": "16.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "npm-watch": "^0.7.0"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2",
+    "rollup": "^2.53.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-import-css": "^3.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
+  },
+  "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "throttle-debounce": "^3.0.1",
+    "traverse": "^0.6.6"
   }
 }
