--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "@babel/plugin-proposal-export-default-from"
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-transform-runtime"
   ],
   "presets": [["@babel/preset-env", {"targets": {"node": "current"}}], "@babel/preset-react"]
 }
