--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inclusivedot/react-admin-lolo",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -35,19 +35,25 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2",
     "rollup": "^2.53.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
