test flow updates

--- a/package.json
+++ b/package.json
@@ -56,8 +56,16 @@
     "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.7",
     "@babel/runtime": "^7.13.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@rjsf/core": "^3.0.0",
+    "@rjsf/material-ui": "^3.0.0",
+    "aws-amplify": "^4.2.1",
+    "react": "^17.0.2",
+    "react-admin": "^3.17.0",
+    "react-admin-import-csv": "^1.0.22",
+    "react-dom": "^17.0.2",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
   },
