--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -60,6 +60,7 @@
     "query-string": "^7.0.1",
     "react-admin": "^3.15.1",
     "react-admin-import-csv": "^1.0.22",
+    "react-redux": "^7.1.0",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
   },
