--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -23,8 +23,10 @@
   "author": "Lolo",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-admin": ">=3.0.0",
+    "react-admin-import-csv": ">=1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -58,9 +60,6 @@
     "@rjsf/material-ui": "^3.0.0",
     "aws-amplify": "^4.2.2",
     "query-string": "^7.0.1",
-    "react-admin": "^3.15.1",
-    "react-admin-import-csv": "^1.0.22",
-    "react-redux": "^7.1.0",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
   },
