--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -23,10 +23,12 @@
   "author": "Lolo",
   "license": "ISC",
   "peerDependencies": {
+    "@aws-amplify/ui-react": ">=1.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "react-admin": ">=3.0.0",
-    "react-admin-import-csv": ">=1.0.0"
+    "react-admin-import-csv": ">=1.0.0",
+    "aws-amplify": ">=3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
