--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -26,8 +26,6 @@
     "@aws-amplify/ui-react": ">=1.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "react-admin": ">=3.0.0",
-    "react-admin-import-csv": ">=1.0.0",
     "aws-amplify": ">=3.0.0"
   },
   "devDependencies": {
@@ -60,6 +58,8 @@
     "@rjsf/core": "^3.0.0",
     "@rjsf/material-ui": "^3.0.0",
     "query-string": "^7.0.1",
+    "react-admin": "^3.17.1",
+    "react-admin-import-csv": "^1.0.22",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
   },
