--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -24,9 +24,11 @@
   "license": "ISC",
   "peerDependencies": {
     "@aws-amplify/ui-react": ">=1.0.0",
+    "@material-ui/core": ">=4.0.0",
+    "@material-ui/icons": ">=4.0.0",
+    "aws-amplify": ">=3.0.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "aws-amplify": ">=3.0.0"
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -53,8 +55,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@rjsf/core": "^3.0.0",
     "@rjsf/material-ui": "^3.0.0",
     "query-string": "^7.0.1",
