--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolocompany/react-admin-lolo",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "A library for schema-driven web apps using [Lolo](https://lolo.company), [React Admin](https://github.com/marmelab/react-admin) and [RJSF](https://github.com/rjsf-team/react-jsonschema-form)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -26,7 +26,12 @@
     "@aws-amplify/ui-react": ">=1.0.0",
     "aws-amplify": ">=3.0.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "react-admin": ">=3.0.0",
+    "react-admin-import-csv": ">=1.0.0",
+    "@material-ui/core": ">=4.0.0",
+    "@material-ui/icons": ">=4.0.0",
+    "@material-ui/styles": ">=4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -45,6 +50,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "react-admin": "^3.17.1",
+    "react-admin-import-csv": "^1.0.22",
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.53.1",
     "rollup-plugin-delete": "^2.0.0",
@@ -53,11 +60,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@rjsf/core": "^3.0.0",
     "@rjsf/material-ui": "^3.0.0",
     "query-string": "^7.0.1",
-    "react-admin": "^3.17.1",
-    "react-admin-import-csv": "^1.0.22",
     "throttle-debounce": "^3.0.1",
     "traverse": "^0.6.6"
   },
